# webserver-performance-benchmarks

./: README.md
go/: README.md  main.go
js/: README.md  app.js  package.json
python/: README.md  main.py
rust/: Cargo.toml  README.md
rust/src/: main.rs  server.rs
test/: test.js
ts/: README.md  package.json
ts/src/: app.ts
